# tetris

./: CMakeLists.txt  Doxyfile  Makefile  README.md
src/: Game.cpp  Game.h  Mnogoblok.cpp  bloki.cpp  bloki.h  colors.cpp  colors.h  main.cpp  posicii.cpp  posicii.h  setka.cpp  setka.h  test_tetris.cpp
